yaml_samples/deployment-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: mywebsite
    tier: frontend
spec:
  replicas: 4
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx
          image: nginx
  selector:
    matchLabels:
      app: myapp

# kubectl create deployment --image=nginx nginx
# kubectl create deployment --image=nginx nginx --dry-run=client -o yaml
# kubectl create deployment nginx --image=nginx --replicas=4
# kubectl scale deployment nginx --replicas=4
# kubectl create deployment nginx --image=nginx --dry-run=client -o yaml > nginx-deployment.yaml

# kubectl rollout status deployment deployment_name
# kubectl rollout history deployment deployment_name
# kubectl rollout undo deployment deployment_name

# deployment strategy - recreate (bad), rolling upgrade (good)
