yaml_samples/network-policy-sample.yaml
apiVersion: networking.ks8.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: api-pod
        namespaceSelector:
          matchLabels:
            name: prod
      - ipBlock:
          cidr: 192.168.5.10/32

      ports:
      - protocol: TCP
        port: 3306
  egress:
    - to:
      - ipBlock:
          cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80


---

apiVersion: networking.ks8.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-from-namespace
  namespace: fubar
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector::
          matchLabels:
            name: internal
      ports:
      - protocol: TCP
        port: 9000


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  egress: # egress is a list of structs containing to and ports fields
    - to: # to is a list of structs containing podSelector,  namespaceSelector and ipBlock fields
      - podSelector:
          matchLabels:
            name: payroll
      ports: # ports is a list of structs containing protocol and port fields
        - protocol: TCP
          port: 8080
    - to:
      - podSelector:
          matchLabels:
            name: mysql
      ports:
        - protocol: TCP
          port: 3306
    - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
